# Slambook-Exercise

./: .gitignore  README.md
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch5/joinMap/: CMakeLists.txt
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch7/: CMakeLists.txt  extra.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp
